--- a/meteora/index.html
+++ b/meteora/index.html
@@ -5,11 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Meteora</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+    integrity="sha384-4LISF5TTJX/fLmGSxO53rV4miRxdg84mZsxmO8Rx5jGtp/LbrixFETvWa5a6sESd" crossorigin="anonymous">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/estilos.css">
 </head>
 
 <body>
+
   <nav class="navbar navbar-expand-md bg-body-tertiary"><!--Navbar-->
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Meteora</a>
@@ -39,6 +43,7 @@
       </div>
     </div>
   </nav>
+
   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel"><!--Carrossel-->
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -88,25 +93,30 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-  <h2 class="text-center">Busque por Categoria</h2>
+
+  <h2 class="text-center">Busque por categoria:</h2>
+
   <div class="container row mx-auto g-4">
 
     <div class="col-6 col-md-4 col-xxl-2">
-      <div class="card">
-        <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg"
-          role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
-          <title>Placeholder</title>
-          <rect width="100%" height="100%" fill="#868e96"></rect>
-          <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
-        </svg>
-        <div class="card-header">
-          <p class="text-center">
-            Categoria
-          </p>
+      <div>
+        <div class="card">
+          <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg"
+            role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
+            <title>Placeholder</title>
+            <rect width="100%" height="100%" fill="#868e96"></rect>
+            <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
+          </svg>
+          <div class="card-header">
+            <p class="text-center">
+              Categoria
+            </p>
+          </div>
         </div>
       </div>
-    </div>
 
+
+    </div>
     <div class="col-6 col-md-4 col-xxl-2">
       <div class="card">
         <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg"
@@ -188,75 +198,143 @@
     </div>
 
   </div>
+
   <h2 class="text-center">Produtos que estão bombando!</h2>
-  <div class="container mx-auto">
-    <div class="col-6 col-md-4 col-xxl-2">
+
+  <div class="container row mx-auto">
+
+    <div class="col-12 col-md-6 col-xxl-4 pb-4">
       <div class="card">
         <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg"
           role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
           <title>Placeholder</title>
-          <rect width="100%" height="100%" fill="#868e96"></rect>
-          <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
+          <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image
+            cap</text>
         </svg>
-        <div class="card-header">
-          <p class="text-center">
-            Categoria
-          </p>
+        <div class="card-body">
+          <h5 class="card-title">Produto</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <p>R$30,00</p>
+          <a href="#" class="btn btn-primary">Ver mais</a>
         </div>
       </div>
     </div>
 
-    <div class="col-6 col-md-4 col-xxl-2">
+    <div class="col-12 col-md-6 col-xxl-4 pb-4">
       <div class="card">
         <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg"
           role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
           <title>Placeholder</title>
-          <rect width="100%" height="100%" fill="#868e96"></rect>
-          <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
+          <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image
+            cap</text>
         </svg>
-        <div class="card-header">
-          <p class="text-center">
-            Categoria
-          </p>
+        <div class="card-body">
+          <h5 class="card-title">Produto</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <p>R$30,00</p>
+          <a href="#" class="btn btn-primary">Ver mais</a>
         </div>
       </div>
     </div>
 
-    <div class="col-6 col-md-4 col-xxl-2">
+    <div class="col-12 col-md-6 col-xxl-4 pb-4">
       <div class="card">
         <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg"
           role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
           <title>Placeholder</title>
-          <rect width="100%" height="100%" fill="#868e96"></rect>
-          <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
+          <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image
+            cap</text>
         </svg>
-        <div class="card-header">
-          <p class="text-center">
-            Categoria
-          </p>
+        <div class="card-body">
+          <h5 class="card-title">Produto</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <p>R$30,00</p>
+          <a href="#" class="btn btn-primary">Ver mais</a>
         </div>
       </div>
     </div>
 
-    <div class="col-6 col-md-4 col-xxl-2">
+    <div class="col-12 col-md-6 col-xxl-4 pb-4">
       <div class="card">
         <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg"
           role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
           <title>Placeholder</title>
-          <rect width="100%" height="100%" fill="#868e96"></rect>
-          <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
+          <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image
+            cap</text>
         </svg>
-        <div class="card-header">
-          <p class="text-center">
-            Categoria
-          </p>
+        <div class="card-body">
+          <h5 class="card-title">Produto</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <p>R$30,00</p>
+          <a href="#" class="btn btn-primary">Ver mais</a>
         </div>
       </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
-      </script>
+    <div class="col-12 col-md-6 col-xxl-4 pb-4">
+      <div class="card">
+        <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg"
+          role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
+          <title>Placeholder</title>
+          <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image
+            cap</text>
+        </svg>
+        <div class="card-body">
+          <h5 class="card-title">Produto</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <p>R$30,00</p>
+          <a href="#" class="btn btn-primary">Ver mais</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-12 col-md-6 col-xxl-4 pb-4">
+      <div class="card">
+        <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg"
+          role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false">
+          <title>Placeholder</title>
+          <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image
+            cap</text>
+        </svg>
+        <div class="card-body">
+          <h5 class="card-title">Produto</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <p>R$30,00</p>
+          <a href="#" class="btn btn-primary">Ver mais</a>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <section class="pb-4">
+
+  <form class="border border-secondary m-3 p-3 text-center div-novidades mx-auto">
+    <h5>
+      Quer receber nossas novidades, promoções exclusivas e 10% OFF na primeira
+      compra? Cadastre-se!
+    </h5>
+
+    <div class="input-group my-3">
+      <input type="email" class="form-control border-secondary rounded-0" placeholder="Digite seu e-mail"
+        aria-label="Digite seu e-mail" aria-describedby="button-addon2"/>
+      <button type="button"
+        id="button-addon2">Enviar</button>
+    </div>
+  </form>
+
+  <footer class="text-center">
+    <p class="py-3">2024 <i class="bi bi-c-circle"></i> Desenvolvido por Thales R. Menezes | Projeto fictifico sem fins comerciais</p>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+  </script>
 </body>
-
 </html>
