--- a/meteora/index.html
+++ b/meteora/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
   <title>Meteora</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
-    integrity="sha384-4LISF5TTJX/fLmGSxO53rV4miRxdg84mZsxmO8Rx5jGtp/LbrixFETvWa5a6sESd" crossorigin="anonymous">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/estilos.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <link rel="stylesheet" href="./estilos.css">
 </head>
 
 <body>
 
-  <nav class="navbar navbar-expand-md bg-body-tertiary"><!--Navbar-->
+  <nav class="navbar navbar-expand-md bg-black navbar-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Meteora</a>
+      <a class="navbar-brand" href="#"><h1 class="m-0"><img class="d-block" src="./assets/logo-meteora.png" alt="Logo da loja Meteora"></h1></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -37,58 +38,52 @@
           </li>
         </ul>
         <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Digite o produto" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Buscar</button>
+          <input class="form-control me-2 rounded-0" type="search" placeholder="Digite o produto" aria-label="Search">
+          <button class="btn btn-outline-light rounded-0" type="submit">Buscar</button>
         </form>
       </div>
     </div>
   </nav>
 
-  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel"><!--Carrossel-->
+  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
         aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
         aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
         aria-label="Slide 3"></button>
     </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400"
-          xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: First slide"
-          preserveAspectRatio="xMidYMid slice" focusable="false">
-          <title>Placeholder</title>
-          <rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#555" dy=".3em">First
-            slide</text>
-        </svg>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="img-fluid d-md-none" src="./assets/Mobile/banner1-mobile.png" alt="Modelo feminina vestindo blusa rosa fluorescente, em fundo lilás.">
+          <img class="img-fluid d-none d-md-block d-xl-none" src="./assets/Tablet/banner1-tablet.png" alt="Modelo feminina vestindo blusa rosa fluorescente, em fundo lilás.">
+          <img class="img-fluid d-none d-xl-block" src="./assets/Desktop/banner1-desktop.png" alt="Modelo feminina vestindo blusa rosa fluorescente, em fundo lilás.">
       </div>
       <div class="carousel-item">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400"
-          xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Second slide"
-          preserveAspectRatio="xMidYMid slice" focusable="false">
-          <title>Placeholder</title>
-          <rect width="100%" height="100%" fill="#666"></rect><text x="50%" y="50%" fill="#444" dy=".3em">Second
-            slide</text>
-        </svg>
+          <img class="img-fluid d-md-none" src="./assets/Mobile/banner2-mobile.png" alt="Modelo feminina utilizando óculos escuros e vestindo conjunto esportivo de blusa e calça na cor preta, sentada em um sofá preto em um fundo rosa.">
+          <img class="img-fluid d-none d-md-block d-xl-none" src="./assets/Tablet/banner2-tablet.png" alt="Modelo feminina utilizando óculos escuros e vestindo conjunto esportivo de blusa e calça na cor preta, sentada em um sofá preto em um fundo rosa.">
+          <img class="img-fluid d-none d-xl-block" src="./assets/Desktop/banner2-desktop.png" alt="Modelo feminina utilizando óculos escuros e vestindo conjunto esportivo de blusa e calça na cor preta, sentada em um sofá preto em um fundo rosa.">
+        <div class="carousel-caption">
+          <h5 class="fs-1">COLEÇÃO ATEMPORAL</h5>
+          <p class="fs-4">Estilo e qualidade para durar.</p>
+        </div>
       </div>
       <div class="carousel-item">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400"
-          xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Third slide"
-          preserveAspectRatio="xMidYMid slice" focusable="false">
-          <title>Placeholder</title>
-          <rect width="100%" height="100%" fill="#555"></rect><text x="50%" y="50%" fill="#333" dy=".3em">Third
-            slide</text>
-        </svg>
+          <img class="img-fluid d-md-none" src="./assets/Mobile/banner3-mobile.png" alt="Modelo masculino vestindo chapéu preto, blazer cinza, cammisa social branca, gravata borboleta na cor preta, óculos com lente transparente e armação na cor preta além de um cordão prateado, em um fundo laranja.">
+          <img class="img-fluid d-none d-md-block d-xl-none" src="./assets/Tablet/banner3-tablet.png" alt="Modelo masculino vestindo chapéu preto, blazer cinza, cammisa social branca, gravata borboleta na cor preta, óculos com lente transparente e armação na cor preta além de um cordão prateado, em um fundo laranja.">
+          <img class="img-fluid d-none d-xl-block" src="./assets/Desktop/banner3-desktop.png" alt="Modelo masculino vestindo chapéu preto, blazer cinza, cammisa social branca, gravata borboleta na cor preta, óculos com lente transparente e armação na cor preta além de um cordão prateado, em um fundo laranja.">
+        <div class="carousel-caption">
+          <h5 class="fs-1">COLEÇÃO ATEMPORAL</h5>
+          <p class="fs-4">Alto impacto visual, baixo impacto ambiental!</p>
+        </div>
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-      data-bs-slide="prev">
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-      data-bs-slide="next">
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
@@ -107,8 +102,8 @@
             <rect width="100%" height="100%" fill="#868e96"></rect>
             <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
           </svg>
-          <div class="card-header">
-            <p class="text-center">
+          <div class="card-header bg-black text-bg-dark">
+            <p class="text-center card-text">
               Categoria
             </p>
           </div>
@@ -125,8 +120,8 @@
           <rect width="100%" height="100%" fill="#868e96"></rect>
           <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
         </svg>
-        <div class="card-header">
-          <p class="text-center">
+        <div class="card-header bg-black text-bg-dark">
+          <p class="text-center card-text">
             Categoria
           </p>
         </div>
@@ -141,8 +136,8 @@
           <rect width="100%" height="100%" fill="#868e96"></rect>
           <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
         </svg>
-        <div class="card-header">
-          <p class="text-center">
+        <div class="card-header bg-black text-bg-dark">
+          <p class="text-center card-text">
             Categoria
           </p>
         </div>
@@ -157,8 +152,8 @@
           <rect width="100%" height="100%" fill="#868e96"></rect>
           <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
         </svg>
-        <div class="card-header">
-          <p class="text-center">
+        <div class="card-header bg-black text-bg-dark">
+          <p class="text-center card-text">
             Categoria
           </p>
         </div>
@@ -173,8 +168,8 @@
           <rect width="100%" height="100%" fill="#868e96"></rect>
           <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
         </svg>
-        <div class="card-header">
-          <p class="text-center">
+        <div class="card-header bg-black text-bg-dark">
+          <p class="text-center card-text">
             Categoria
           </p>
         </div>
@@ -189,8 +184,8 @@
           <rect width="100%" height="100%" fill="#868e96"></rect>
           <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
         </svg>
-        <div class="card-header">
-          <p class="text-center">
+        <div class="card-header bg-black text-bg-dark">
+          <p class="text-center card-text">
             Categoria
           </p>
         </div>
@@ -216,7 +211,7 @@
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
           <p>R$30,00</p>
-          <a href="#" class="btn btn-primary">Ver mais</a>
+          <a href="#" class="btn btn-primary botao-lilas rounded-0 border-0">Ver mais</a>
         </div>
       </div>
     </div>
@@ -234,7 +229,7 @@
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
           <p>R$30,00</p>
-          <a href="#" class="btn btn-primary">Ver mais</a>
+          <a href="#" class="btn btn-primary botao-lilas rounded-0 border-0">Ver mais</a>
         </div>
       </div>
     </div>
@@ -252,7 +247,7 @@
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
           <p>R$30,00</p>
-          <a href="#" class="btn btn-primary">Ver mais</a>
+          <a href="#" class="btn btn-primary botao-lilas rounded-0 border-0">Ver mais</a>
         </div>
       </div>
     </div>
@@ -270,7 +265,7 @@
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
           <p>R$30,00</p>
-          <a href="#" class="btn btn-primary">Ver mais</a>
+          <a href="#" class="btn btn-primary botao-lilas rounded-0 border-0">Ver mais</a>
         </div>
       </div>
     </div>
@@ -288,7 +283,7 @@
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
           <p>R$30,00</p>
-          <a href="#" class="btn btn-primary">Ver mais</a>
+          <a href="#" class="btn btn-primary botao-lilas rounded-0 border-0">Ver mais</a>
         </div>
       </div>
     </div>
@@ -306,16 +301,47 @@
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
           <p>R$30,00</p>
-          <a href="#" class="btn btn-primary">Ver mais</a>
+          <a href="#" class="btn btn-primary botao-lilas rounded-0 border-0">Ver mais</a>
         </div>
       </div>
     </div>
 
   </div>
 
-  <section class="pb-4">
+  <section class="pb-4 bg-black text-bg-dark">
 
-  <form class="border border-secondary m-3 p-3 text-center div-novidades mx-auto">
+    <h2 class="text-center py-3">Conheça todas as nossas facilidades</h2>
+
+    <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center gap-3 px-3">
+      <div class="divs-facilidades d-flex align-items-center">
+        <div><i class="verde-limao bi bi-x-diamond fs-1"></i></div>
+        <div>
+          <div class="ms-3 mb-1 verde-limao">PAGUE PELO PIX</div>
+          <div class="texto-menor ms-3">Ganhe 5% OFF em
+            pagamentos via PIX</div>
+        </div>
+      </div>
+
+      <div class="divs-facilidades d-flex">
+        <div><i class="verde-limao bi bi-arrow-repeat fs-1"></i></div>
+        <div>
+          <div class="ms-3 mb-1 verde-limao">TROCA GRÁTIS</div>
+          <div class="texto-menor ms-3">Fique livre para trocar em até 30 dias.</div>
+        </div>
+      </div>
+
+      <div class="divs-facilidades d-flex">
+        <div><i class="verde-limao bi bi-flower1 fs-1"></i></div>
+        <div>
+          <div class="ms-3 mb-1 verde-limao">SUSTENTABILIDADE</div>
+          <div class="texto-menor ms-3">Moda responsável, que respeita o meio ambiente.</div>
+        </div>
+      </div>
+    </div>
+
+  </section>
+
+  <form class="container border border-secondary m-3 p-3 text-center div-novidades mx-auto">
     <h5>
       Quer receber nossas novidades, promoções exclusivas e 10% OFF na primeira
       compra? Cadastre-se!
@@ -323,18 +349,19 @@
 
     <div class="input-group my-3">
       <input type="email" class="form-control border-secondary rounded-0" placeholder="Digite seu e-mail"
-        aria-label="Digite seu e-mail" aria-describedby="button-addon2"/>
-      <button type="button"
+        aria-label="Digite seu e-mail" aria-describedby="button-addon2" />
+      <button type="button"class="btn btn-primary botao-lilas rounded-0 border-0 "
         id="button-addon2">Enviar</button>
     </div>
   </form>
 
-  <footer class="text-center">
-    <p class="py-3">2024 <i class="bi bi-c-circle"></i> Desenvolvido por Thales R. Menezes | Projeto fictifico sem fins comerciais</p>
+  <footer class="text-center bg-black text-bg-dark">
+    <p class="card-text py-3">2023 <i class="bi bi-c-circle"></i> Desenvolvido por Alura | Projeto fictício sem fins comerciais.</p>
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
-  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
